[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "croc-ui"
version = "1.0.0"
description = "A Python library for building beautiful static websites using Python — no HTML/CSS required."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Swarup Kumar Sahoo" }
]
keywords = ["html", "css", "web", "ui", "static-site", "croc", "croc-ui", "python-web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/swarup-kumar-sahoo/croc"
Repository = "https://github.com/swarup-kumar-sahoo/croc"
"Bug Tracker" = "https://github.com/swarup-kumar-sahoo/croc/issues"
Documentation = "https://github.com/swarup-kumar-sahoo/croc#readme"

[tool.setuptools.packages.find]
include = ["croc_ui*"]

[tool.setuptools.package-data]
"croc_ui" = ["py.typed"]